# SimOps

./: .antigravityignore  .dockerignore  .env  .env.example  .env.template  .gitignore  .gitmodules  00010009_d97409455fa543b3a224250f_step_000.step  BUILTIN_VS_OPENFOAM.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEVOPS_CHECKLIST.ps1  Dockerfile.api  Dockerfile.frontend  Dockerfile.watcher  Dockerfile.worker  Dockerfile.worker-base  Dockerfile.worker-fast  E2E_VS_UI_ANALYSIS.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  ITERATIVE_SOLVER_AND_CONVECTION.md  Makefile  OPENFOAM_BC_AUTOSETUP_PLAN.md  PAINTBRUSH_DEBUG_GUIDE.md  PARAMETER_EFFECTS.md  PHYSICS_VERIFICATION_PLAN.md  README.md  RECOMMENDATION.md  RUN_ME.bat  SOLVER_VERIFICATION.md  THERMAL_ISSUES_AND_FIXES.md  THERMAL_UNIT_FIX_NOTES.txt  THERMAL_VIZ_FIXES.md  UI_UPDATES.md  _skipped.face  _skipped.node  add_surface_and_export.py  alb_info.txt  (+133 more)
.agent/: DEPLOYMENT_READINESS_REPORT.md  rules.md
.backup_temp/: exhaustive_strategy.py.backup  mesh_generator.py.backup
.claude/: settings.local.json
MESH-26/: Functional-Web-Viewer
apps/: README.md
backend/: .env.example  Dockerfile  README.md  add_reset_columns.py  add_user.py  alembic.ini  api_server.py  api_server_b64.txt  api_server_parser_fixed.py  celery_app.py  check_logs.sh  check_ssm_results.py  cloudwatch_logs.py  compute_backend.py  config.py  debug_imports.py  debug_ssm.py  diagnose_auth.py  ensure_db.py  extract_job.py  get_project_debug.py  headless_solver.py  heavy_fix_aws.py  job_logger.py  modal_client.py  modal_service.py  models.py  mypy.ini  openfoam_poc_service.py  openfoam_snappy_service.py  repair_file.py  requirements.txt  run_migration.py  run_server.sh  run_ssm_fix.py  slicing.py  storage.py  tasks.py  test_429_quick.sh  test_429_response.sh  (+4 more)
benchmark_results/: benchmark_20251219_154504.json
cad_files/: 00040000_fc21414ac8dd4a879b485b51_step_001.step  120mm_fan_asm.stp.opt  Axisymmetric Slice.step  BALLAST_NUT_external.prt  BALLAST_WASHER.prt  BOSS_PLUG_external.prt  ChamboRegina.step  Cylinder.json  GOPRO_external.prt  RECOVERY_EYENUT_external.prt  RECOVERY_NUT_external.prt  RocketEngine.step  ToroidKnot.step  core_sample.step  ge_jet_engine_bracket_benchmark.step  tesla_valve_benchmark_single.step
calculix_native/: README.md
configs_sweep/: Airfoil_cfd.json  Airfoil_structural.json  Airfoil_thermal.json  Cube_cfd.json  Cube_structural.json  Cube_thermal.json  Cylinder_cfd.json  Cylinder_structural.json  Cylinder_thermal.json  L_bracket_cfd.json  L_bracket_structural.json  L_bracket_thermal.json  model_cfd.json  model_structural.json  model_thermal.json
converters/: README.md  __init__.py  poly_hex_converter.py
core/: README.md  __init__.py  advanced_geometry.py  advanced_geometry.py.backup_20251119_230251  ai_integration.py  anisotropic_integration.py  anisotropic_meshing.py  ansys_export.py  api_contract.py  cad_operations.py  cfd_quality.py  claude_integration.py  config.py  config_loader.py  curvature_adaptive.py  enclosure_geometry.py  export_fluent_msh.py  export_mechanical_cdb.py  fast_winding.py  geometry_analyzer.py  geometry_cleanup.py  geometry_healer.py  geometry_provider.py  gpu_adaptive_refinement.py  gpu_mesher.py  hex_quality_analyzer.py  isolation_worker_script.py  mat_lib.py  materials.json  materials.py  mesh_exporter.py  mesh_generator.py  mesh_generator.py.backup_20251119_230251  mesh_iterator.py  mesh_quality_validator.py  mesh_worker_pool.py  meshing_gateway.py  optimization_config.py  paintbrush_field_generator.py  paintbrush_geometry.py  (+11 more)
deployment/: gunicorn.service
desktop-app/: mock_update_server.py  package-lock.json  package.json  updater-keys  updater-keys.pub  verify_task.py
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: backend_manager.rs  main.rs  system_check.rs  updater.rs
distutils/: __init__.py  version.py
docs/: API_WEBHOOKS.md  AWS_DEPLOYMENT.md  FAST_MODE.md  MESH_IMPORT_ROBUSTNESS.md  OFFLINE_INSTALLER.md  ONLINE_INSTALL.md  ONLINE_INSTALL_GUIDE.md  OPENFOAM_SETUP_GUIDE.md  PROJECT_STRUCTURE.md  README.md  RFC_Cloud_Meshing.md  SIMULATION_PROGRESS_UX_IMPROVEMENTS.md  TESTING_GUIDE.md  THERMAL_CASE_SUCCESS.md  VALIDATION_CHECKLIST.md  calculix_roadmap.md  dns_and_smoke_test_guide.md  how_to_access_logs.md  job_extraction_guide.md  local_development.md  local_fullstack_guide.md  migration_and_cutover_plan.md  modal_compute_migration_plan.md  polyhedral_visualization_design.md  staging_deployment_cheat_sheet.md
gpu_experiments/: BUILD_GUIDE.md  CMakeLists.txt  Dockerfile  GPU_BUILD_STATUS.md  README_PHASE1.md  bindings.cpp  build_gpumesher.ps1  main.cpp  verify_gpumesher.py
input/: Loft.step  USED_Test_E2E_CFD.json  USED_Test_E2E_CFD.step  USED_Test_E2E_Struct.json  USED_Test_E2E_Struct.step  USED_model.json  USED_model.step  USED_model_v3.json  USED_model_v4.json  model.json
jobs_log/: Airfoil_cfd.result.json  Airfoil_structural.result.json  Airfoil_thermal.result.json  Cube_cfd.result.json  Cube_structural.result.json  Cube_thermal.result.json  Cylinder_cfd.result.json  Cylinder_structural.result.json  Cylinder_thermal.result.json  L_bracket_cfd.result.json  L_bracket_structural.result.json  L_bracket_thermal.result.json  RocketEngine_cfd.result.json  RocketEngine_structural.result.json  RocketEngine_thermal.result.json
khorium_skills/: README.md  __init__.py
output_loft_run/: Loft_result.json
scripts/: README.md  auto_stitch.py  benchmark_compute.py  build_backend.py  build_offline_package.ps1  check_env_vars.py  check_manifold_2.py  check_users.py  cleanup.py  cleanup_ec2_disk.sh  cleanup_test_files.py  debug_assembly_split.py  deep_diagnose_step.py  demo_ai_pipeline.py  dev_orchestrator.py  divide_and_conquer.py  export_isolated.py  export_robust_stl.py  export_stl.py  fast_parallel_mesh.py  fast_parallel_mesh_v2.py  fast_parallel_mesh_v3.py  fast_repair_tool.py  fragment_assembler.py  generate_core_sample.py  generate_feature_report.py  generate_toroid_knot.py  geometry_triage.py  gmsh_merge.py  install.bat  install.ps1  (+58 more)
(+1167 files in other folders)
