[package]
name = "simops-tauri-shell"
version = "0.1.0"
description = "SimOps Desktop Shell"
authors = ["SimOps Team"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "fs-all", "dialog-all", "shell-open", "updater"] }

[features]
# default enables all webview2 features
custom-protocol = [ "tauri/custom-protocol" ]
